linotp (3.2~0dev-0) experimental; urgency=low

  Fixes:
  * license limits are now checked during userservice token enrollment

  Features:
  * add grace to license volume exceeding and display accordingly a message
    in the the web ui

 -- KeyIdentity LinOTP Packaging <linotp@keyidentity.com>  Thu, 9 Sep 2021 17:13:51 +0200

linotp (3.1~rc1-1) buster-dev; urgency=low

  * Set version 3.1~rc1

  Features:
  * ManageUI policy editor utilizes full window width for improved layout.
  * Inform the admin via audit log if there is an challenge integrity error.
  * Userservice allows enrollment of HOTP tokens with the webprovisionGOOGLE policy.
  * Userservice allows enrollment of TOTP tokens with the webprovisionGOOGLEtime policy.
  * RestSMSProvider allows access to nested JSON request data structure items by path.
  * Use database config value to enable get_otp feature
  * Simplify the HMAC acountname and tokenissuer fallback rules for a more predictable
    behavior in the google authenticator url.
  * Token monitoring now better sanitizes the status parameter
  * Improved Manage-UI error message if something fails in the initial config
    load phase.
  * sqlite can be used as audit database - the response of audit/search
    now skips streaming the response data for sqlite audit databases.
  * The server now checks whether the audit table exists or not on start.

  Breaking changes:
  * No longer support AUDIT_POOL_RECYCLE configuration setting.
  * Sqlite audit databases can no longer share the same file with LinOTP. If configured
    to share the same file, LinOTP will add a suffix to the audit database file name.
  * Audit database timestamp is now ISO 8601 formatted. The timestamp is saved in UTC
    timezone instead of server local time.

  Fixes:
  * mOTP tokens can now be used in challenge response mode
  * Adjust yubico token config text to make it clear that a dedicated
    API key from yubico is required.